# airev

./: .gitignore  Cargo.toml  README.md  concept.md  project-idea.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-RESEARCH.md
.planning/phases/02-rendering-skeleton/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-git-layer/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-06-PLAN.md  03-06-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-persistence-layer/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-RESEARCH.md
.planning/quick/1-automated-self-verification-before-human/: 1-PLAN.md  1-SUMMARY.md
.planning/quick/2-fix-status-bar-error-spam-from-git-worke/: 2-PLAN.md  2-SUMMARY.md
.planning/quick/3-fix-narrow-terminal-layout-panels-cut-of/: 3-PLAN.md  3-SUMMARY.md
.planning/quick/4-verify-phase-4-persistence-layer-end-to-/: 4-PLAN.md  4-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/todos/pending/: 2026-02-19-add-demo-mode-with-bundled-sample-diffs.md
airev/: Cargo.toml
airev-core/: Cargo.toml
airev-core/src/: db.rs  lib.rs  schema.rs  types.rs
airev-core/tests/: db_lifecycle.rs
airev-mcp/: Cargo.toml
airev/src/: app.rs  event.rs  main.rs  theme.rs  tui.rs  ui.rs
airev/src/git/: mod.rs  types.rs  worker.rs
airev/src/ui/: diff_view.rs  file_tree.rs  help.rs  keybindings.rs  layout.rs  mod.rs
