[workspace]
resolver = "3"
members = ["airev", "airev-mcp", "airev-core"]

[workspace.dependencies]
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1.49", features = ["full"] }
rusqlite = { version = "0.37", features = ["bundled"] }
tokio-rusqlite = "0.7"
signal-hook = "0.3"
futures = "0.3"
airev-core = { path = "airev-core" }
