[workspace]
resolver = "3"
members = ["airev", "airev-mcp", "airev-core"]

[workspace.dependencies]
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1.49", features = ["full"] }
rusqlite = { version = "0.37", features = ["bundled"] }
tokio-rusqlite = "0.7"
signal-hook = "0.3"
futures = "0.3"
airev-core = { path = "airev-core" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
git2              = "0.20"
crossbeam-channel = "0.5"
syntect           = { version = "5.3", default-features = false, features = ["default-fancy"] }
syntect-tui       = "3.0"
similar           = { version = "2.7", features = ["inline"] }
uuid              = { version = "1", features = ["v4"] }
