[package]
name = "airev"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
signal-hook = { workspace = true }
futures = { workspace = true }
airev-core = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
git2              = { workspace = true }
crossbeam-channel = { workspace = true }
syntect           = { workspace = true }
syntect-tui       = { workspace = true }
similar           = { workspace = true }
tokio-rusqlite    = { workspace = true }
